# jornada_python

./: Desafio_Modulo_02_SistemaBancario_02.py  README.md
Modulo_01_&_02/: Desafio_Modulo_01_SistemaBancario.py
Modulo_04/: Desafio_API_Flask.py  Desafio_Alchemy.py  Desafio_Alchemy_Resposta.txt  Desafio_Mongo.py  Desafio_Mongo_Resposta_part_01.txt  Desafio_Mongo_Resposta_part_02.txt
Modulo_Django/TweepyProject/: .editorconfig  docker-compose.yml  main.py
Modulo_Django/TweepyProject MySQL/: main.py  pyproject.toml  requirements.txt
Modulo_Django/TweepyProject MySQL/src/: connection.py  secrets.py  services.py
Modulo_Django/TweepyProject MySQL/tests/: tests.py
Modulo_Django/agenda/: db.sqlite3
Modulo_Django/blog-simple/: db.sqlite3
Modulo_Django/projeto_cadastro_usuarios/: db.sqlite3
Modulo_Flask/Programador_Habilidades/: :memory:programador_Habilidade.db  gerenciamento_de_tabelas.py  habilidade.py  programador.py  programador_Habilidade.db  programador_habilidade.py
Modulo_Flask/api_atividades/: :memory:atividades.db  app.py  models.py  utils.py
Modulo_Flask/api_atividades_BD/: Models.py  app.py  atividadeRowInclusion.py  utilsPessoas.py
Modulo_Flask/api_atividades_DB_auth/: app.py  model.py  newColumn.py  utils.py
Modulo_Flask/pythonProject/: run.py
SistemaBancario_03_Modular/: principal.py  sistema_bancario_classes.py  sistema_bancario_funcoes_auxiliares.py
criacao-de_pacotes/exemplo_projeto_simples/: README.md  exemplo2.py  requirements.txt  setup.cfg  setup.py
criacao-de_pacotes/exemplo_projeto_simples/src/exemplo_package/: example1.py
(+51 files in other folders)
