[tool.poetry]
name = "mongo-test"
version = "0.1.0"
description = ""
authors = ["Claudio ES Andrade <claudioe.s.andrade@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pymongo = "^4.8.0"
tweepy = "^4.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core >= 1.0.0"]
build-backend = "poetry.core.masonry.api"
