[metadata]
name = example-pkg-project_example
version = 0.0.1
author = Claudio ES Andrade
author_email = claudioe.s.andrade@gmail.com
description = Exemplo de como realizar um pacote
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/claudio-es-andrade/jornada_python/project_example
project_urls =
    Bug Tracker = https://github.com/claudio-es-andrade/jornada_python/project_example/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.0
include_package_data = True